# TopLoggerStats

./: .gitignore  README.md  install.sh  pyproject.toml  wsgi.py
cronjobs/: update_static_database.py
resources/: Logo V2.html  Logo.html  grades.yaml
resources/visuals/: Ascends over time.js  Ascends per X.js  Ascends per grade.js  Flash rate per X.js  Flash rate.js  Grading accuracy.js  Max grade over time.js  Max grade per X.js  Rating accuracy.js  Rating per X.js
scripts/: create_databases.py  create_directories.py  populate_databases.py
src/: custom_types.py  database.py  main.py
src/cython_modules/: api.pxd  api.pyi  api.pyx  constants.pxd  constants.pyi  constants.pyx  engine.pxd  engine.pyi  engine.pyx  statistics_processor.pxd  statistics_processor.pyi  statistics_processor.pyx  utils.pxd  utils.pyi  utils.pyx  visualizations.pyi  visualizations.pyx
static/: manifest.json  robots.txt  sitemap.xml
static/css/: start.css  stats.css  style.css
static/css/minified/: start.css  stats.css  style.css
static/js/: main.js  start.js
static/js/minified/: main.js  start.js
templates/: base.html  dashboard.html  error_template.html  start.html
