[project]
name = "TopLoggerStats"
version = "1.0.0"
description = "TopLoggerStats"
authors = [
    {name = "Marco Strijker", email = "toploggerstats@gmail.com"}
]
urls = {"Homepage" = "https://toploggerstats.nl"}
requires-python = ">=3.13"
dependencies = [
    "cython==3.1.0a1",
    "flask==3.0.3",
    "flask-caching==2.3.0",
    "httpx==0.27.2",
    "mypy>=1.13.0",
    "pytz==2024.2",
    "requests==2.32.3",
    "setuptools==75.2.0",
]

[dependency-groups]
dev = [
    "black==24.10.0",
    "mypy==1.13.0",
    "mypy-extensions==1.0.0",
    "pytest==8.3.4",
    "xenon>=0.9.3",
]
